tests/ui/rfcs/rfc-2632-const-trait-impl/super-traits-fail-2.nn.stderr
error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-2.rs:11:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-2.rs:11:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^

error: aborting due to 2 previous errors

